--- a/package.json
+++ b/package.json
@@ -46,9 +46,14 @@
     "@types/mongoose": "^5.7.36",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.14.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.1.2",
     "tslint": "^5.12.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.5"
   }
 }
