--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-unused-imports": "^1.0.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "2.1.2",
